# web-app-haskell

./: README.md  README.org  README.org~  webapp-tryout.cabal  webapp-tryout.cabal~
imp/: Notes.org~  README.md  README.org  README.org~  makefile  org-templates  run.sh  run.sh~  sqlite.db  sqlite.db-shm  sqlite.db-wal  stack.yaml  style  test.sh  testAndRun.sh  web-app-haskell.cabal  webapp-tryout.cabal  webapp-tryout.cabal~
imp/src/: #Main.hs#  #index.org#  Api.hs  Api.org  Api.org~  App.hs  App.org  App.org~  Authentication.hs  Authentication.org  Authentication.org~  Controllers.hs  ExternalTypes.hs  Main.hs  Main.org  Models.hs  Role.hs  api_temp.org  models.hs  models.org  models.org~  sitemap.org  sitemap.org~
imp/src/nonmod-runtime/api/: Api.org  Api.org~  NonAdminApi.hs  NonSecureApi.hs  NonSecureRoutes.org~
imp/src/nonmod-runtime/authentication/: Authentication.hs  Authentication.org
imp/src/nonmod-runtime/controllers/: Controllers.hs  Controllers.org  index.org
imp/src/nonmod-runtime/models/: Role.hs
imp/src/runtime/: Api.hs  Api.org  App.hs  App.org  Models.hs  index.org  index.org~  models.org
imp/src/runtime/api/: #Api.org#  AddRole.org  AddRole.org~  AddUser.hs  AddUser.org  AddUser.org~  AdminApi.hs  AdminApi.org  AdminApi.org~  Api.hs  Api.org  Api.org~  DeleteRole.org  DeleteRole.org~  DeleteUser.org  DeleteUser.org~  Index.hs  IndexPage.org  IndexPage.org~  Login.org  Login.org~  Logout.org  Logout.org~  NonAdminApi.hs  NonAdminApi.org  NonSecureApi.hs  NonSecureRoutes.org  SecureApi.org~  SetEmail.hs  SetEmail.org  SetEmail.org~  SetName.org  SetName.org~  ShowRoles.hs  ShowRoles.org  ShowRoles.org~  ShowSessions.hs  ShowSessions.org  ShowSessions.org~  ShowUserDetails.hs  (+6 more)
imp/src/runtime/app/: App.hs  App.org  App.org~  Main.org  index.org
imp/src/runtime/authentication/: Authentication.hs  Authentication.org  index.org
imp/src/runtime/controllers/: Controllers.org  Controllers.org~
imp/src/runtime/models/: Models.hs  index.org  models.org  models.org~
imp/src/test/: #AppSpec.hs#  AppSpec.hs  AppSpec.hs~  AppSpec.org  AppSpec.org_archive  AppSpec.org~  Spec.hs  Spec.org  Spec.org~  UnauthorisedSpec.org
imp_without_tests/: is_email.hs  run.sh  sqlite.db
imp_without_tests/src/: Api.hs~  Api.org  App.hs  App.org  Authentication.org  Main.org~  Models.hs  Models.hs~  Role.hs  api_temp.org~
req/: #PyAppTests.org#  .#PyAppTests.org  PyAppTests.org  Req.org  Requirements.org  Requirements.org~  Tests.org  Tests.org~  TestsRef.org  TestsRef.org~
src/: #routes.org#  .#models.hs  Api.org~  controllers.org  controllers.org~  main.org~  models.org~  routes.hs~  routes.org~
study/: report.org
theory/: #ComparativeStudy.org#  ComparativeStudy.org~  ReadingList.org  exampleDepParser.hs  exampleDepParser.hs~  exampleDepParser.html  exampleDepParser.org  notes.org  notes.org~  num_of_lines.org  num_of_lines.org~  num_tokens.py  num_tokens.py~  nwcl_count.py  nwcl_count.py~  paper_tent.org  paper_tent.org~  try_nwcl.hs
