name:                web-app-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/web-app-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable web-app-haskell
  hs-source-dirs:      build/code
  main-is:             Main.hs
  other-modules :      Role,
                       Api,
                       App,
                       Models,
                       Authentication 
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       -- custom dependencies
                     , aeson-compat
                     , base-compat
                     , mtl
                     , attoparsec
                     , bytestring
                     , string-conversions 
                     , lucid
                     , time
                     , http-media
                     , directory 
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , blaze-markup
                     , blaze-html
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , aeson
                     , text
                     , monad-logger
                     , generic-deriving
                     , yesod
                     , resourcet