name:                web-app-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vlead/web-app-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              VLEAD
maintainer:          example@example.com
copyright:           2017 VLEAD
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable web-app-haskell
  hs-source-dirs:      build/code
  main-is:             Main.hs
  other-modules :      Role,
                       Api,
                       App,
                       Models,
                       Authentication 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                       -- custom dependencies
                     , aeson-compat
                     , base-compat
                     , mtl
                     , attoparsec
                     , bytestring
                     , string-conversions 
                     , lucid
                     , time
                     , http-media
                     , directory 
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , blaze-markup
                     , blaze-html
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , aeson
                     , text
                     , monad-logger
                     , generic-deriving
                     , yesod
                     , resourcet

  default-language:    Haskell2010

test-suite web-app-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , web-app-haskell
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vlead/web-app-haskell
